eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api # All pod that have this label will be managed by this deployment
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 814575821063.dkr.ecr.eu-west-1.amazonaws.com/simplebank:fa49e947975a539e3ff379122fb78b8150cf6eca:latest
        ports:
        - containerPort: 8080
