eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  type: ClusterIP
  selector:
    app: simple-bank-api
  ports:
  - port: 80
    targetPort: 8080
    name: simple-bank-api-ip
